--- a/movie_category.html
+++ b/movie_category.html
@@ -19,7 +19,7 @@
             <div>
                 <img src="images/logo.png" alt="">
                 <h4>BSH <span>Collections</span></h4>
-                <a href="movie.html">Home</a>
+                <a href="index.html">Home</a>
             </div>
             <div>
                 <input type="search" placeholder="Search movies, music...">
@@ -31,7 +31,7 @@
           <main>
              <!---top best movies-->
     <div class="favourate">
-     
+        <h4>Action Movies</h4>
         <div class="ranking">
          <a href="https://www.youtube.com/watch?v=beToTslH17s" target="_blank">
             <div class="rank">
